# ruscut

./: .gitignore  AGENT.md  CHANGELOG.md  Cargo.toml  GEMINI.md  LICENSE  README.md  SKILL.md  auto_linter.config.rust.yaml  install.sh  output  release.toml
.github/workflows/: ci.yml  release.yml  rust.yml
config/: default.toml
scripts/: bump.sh  dev.sh  install.sh  release.sh
shaders/: sigmoid.comp  sigmoid.spv
src-rust/: cli_main_entry.rs  lib.rs  tui_main_entry.rs
src-rust/agent/: README.md  bg_remover_orchestrator.rs  dependency_injection_container.rs  mod.rs
src-rust/capabilities/: image_data_processor.rs  mod.rs  removal_usecase_executor.rs
src-rust/contract/: amdgpu_remover_port.rs  background_remover_port.rs  bg_remover_aggregate.rs  di_container_aggregate.rs  image_processing_protocol.rs  mod.rs  model_downloader_port.rs  onnx_remover_port.rs  pci_bar_port.rs  pm4_packet_port.rs  removal_transfer_aggregate.rs  removal_usecase_protocol.rs  ring_buffer_port.rs  video_processor_port.rs  vulkan_compute_port.rs
src-rust/infrastructure/: amdgpu_remover_adapter.rs  ffmpeg_video_adapter.rs  huggingface_model_adapter.rs  mod.rs  onnx_remover_adapter.rs  pci_bar_provider.rs  pm4_packet_loader.rs  ring_buffer_provider.rs  vulkan_compute_provider.rs
src-rust/surfaces/: cli_command_handler.rs  mod.rs  tui_command_handler.rs  tui_command_page.rs  tui_state_store.rs  tui_view_controller.rs
src-rust/taxonomy/: mod.rs  (+7 more)
tests/: image_processor_tests.rs  infrastructure_tests.rs  pm4_tests.rs  taxonomy_tests.rs
tool/: merge_videos.py  upscale_video.py
