[package]
name = "ruscut"
version = "0.1.2"
edition = "2024"
description = "AI-powered background remover CLI and TUI built in Rust using ONNX/BRIA RMBG-2.0"
license = "MIT"
repository = "https://github.com/rakaarwaky/ruscut"
homepage = "https://github.com/rakaarwaky/ruscut"
keywords = ["background-removal", "ai", "image", "cli", "onnx"]
categories = ["command-line-utilities", "multimedia::images"]
readme = "README.md"
exclude = [".github", "*.sh", "target"]

[features]
default = []
rocm = ["ort/rocm"]

[dependencies]
ort = "2.0.0-rc.12"
image = "0.25"
fast_image_resize = "3.0"
ndarray = { version = "0.17", features = ["std"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking"] }
indicatif = "0.17"
anyhow = "1.0"
colored = "2.1"
dirs = "5.0"
dialoguer = "0.12.0"
tokio = { version = "1", features = ["full"] }
ratatui = "0.30"
crossterm = "0.27"

[[bin]]
name = "ruscut"
path = "src-rust/cli_main_entry.rs"

[[bin]]
name = "ruscut-tui"
path = "src-rust/tui_main_entry.rs"
